2011-04-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnutls.c (emacs_gnutls_handshake): Return an error if we're not
	supposed to be handshaking.
	Reported by Paul Eggert <eggert@cs.ucla.edu>.

2011-04-26  Daniel Colascione <dan.colascione@gmail.com>

	* lisp.h (Qdebug): List symbol.
	* eval.c (Qdebug): restore global linkage.
	* keyboard.c (debug-on-event): New variable.
	(handle_user_signal): Break into debugger when debug-on-event
	matches the current signal symbol.

2011-04-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* alloc.c (check_sblock, check_string_bytes)
	(check_string_free_list): Convert to standard C.

2011-04-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* w32.c (emacs_gnutls_push): Fix typo.

2011-04-25  Eli Zaretskii  <eliz@gnu.org>

	* gnutls.c (emacs_gnutls_handshake): Avoid compiler warnings about
	"cast to pointer from integer of different size".

	Improve doprnt and its use in verror.  (Bug#8545)
	* doprnt.c (doprnt): Document the set of format control sequences
	supported by the function.  Use SAFE_ALLOCA instead of always
	using `alloca'.

	* eval.c (verror): Don't limit the buffer size at size_max-1, that
	is one byte too soon.  Don't use xrealloc; instead xfree and
	xmalloc anew.

2011-04-24  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnutls.h: Add GNUTLS_STAGE_CALLBACKS enum to denote we're in the
	callbacks stage.

	* gnutls.c: Renamed global_initialized to
	gnutls_global_initialized.  Added internals for the
	:verify-hostname-error, :verify-error, and :verify-flags
	parameters of `gnutls-boot' and documented those parameters in the
	docstring.  Start callback support.
	(emacs_gnutls_handshake): Add Woe32 support. Retry handshake
	unless a fatal error occured. Call gnutls_alert_send_appropriate
	on error. Return error code.
	(emacs_gnutls_write): Call emacs_gnutls_handle_error.
	(emacs_gnutls_read): Likewise.
	(Fgnutls_boot): Return handshake error code.
	(emacs_gnutls_handle_error): New function.
	(wsaerror_to_errno): Likewise.
